Alt syntax parser rewrite + modularize parser/runtime/playground
Headline: full rewrite of the alt-syntax frontend over 7 vertical slices,
landing the canonical syntax documented in docs/alternative-syntax.ptf.
Single-char logical ops (&/|/!), brackets reserved for sorts, `:` as the
universal narrowing operator, `@` as the principal subject of any
refinement, contextual base inference in match arms, struct destructure
with declared-field-sort lookup, explicit `self` in methods (no @
substitution magic), and `[Function(P):R]` anonymous function sorts.
The structural bug that motivated the rewrite — `[n*2]` parsing as
Refined("n", *self 2) — is now grammatically impossible.

IR:
- Eager sort compilation. IrCompiler walks every reachable IrSort up
  front and stores compiled Sorts in CompiledModule.compiledSorts
  (IdentityHashMap). IrInterpreter.eval and TruffleLowering.lower no
  longer declare throws CompileException — runtime path is exception-free.
- IrSort.Structural now preserves field declaration order via
  LinkedHashMap (Map.copyOf was hash-ordering, breaking destructure).

Modules:
- New pontif-parser, pontif-runtime, pontif-playground modules.
- pontif-demo's symbolic rules moved to pontif-core; demo parser
  duplicates removed.

Playground:
- App.onRunClicked routes through PontifCompiler.compileAlt() (sister
  to compile(), which still drives S-expr unit tests as the stable
  reference language).
- Default sample swapped to an alt-syntax tour: factorial dispatch,
  isEven/isOdd mutual recursion, sign match with `@`, timesTwo
  spec-only synthesis. Sum: 134. Pinned by integration test.

Docs:
- alternative-syntax.ptf: load-bearing principles + reference table.
- TODO.md: proof-engine work flagged as next priority (match totality
  compile-time, return-type proof, Function-sort runtime validation,
  sort checking inside refinement predicates).

Tests: 598 passing, 0 skipped, 0 failures.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>